--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Data Science Portofolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>Data Science<br />
+						Portofolio</h1>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,11 +28,11 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">My Portofolio</a>
 					</header>
 
 				<!-- Nav -->
-					<nav id="nav">
+				<!--	<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">This is Massively</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
@@ -47,11 +45,13 @@
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
+				-->
 
 				<!-- Main -->
 					<div id="main">
 
 						<!-- Featured Post -->
+						<!--
 							<article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
