adding explanation to 2 pages

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<div id="intro">
 						<h1>Data Science<br />
 						Portofolio</h1>
+						<p>Created by Muchammad Malik</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -70,25 +71,37 @@
 						<!-- Posts -->
 							<section class="posts">
 								<article>
-									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+									<header>							
+										<h2><a href="#">World Happiness Index<br />
+										in 156 Countries</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>When planning to move to the other country, happiness index of the destinated country is one thing that need to be considered. World happiness index data contain 
+									the country’s happiness score, GDP per capita, social support, healthy life expectancy, freedom to make life choices, generosity, perceptions of corruption, 
+									In this project, I extract the World Happiness Index data from Kaggle and answer the several question that related with happiness index. 
+									The question that I answered in this project are: <br />
+										1.	Which country is the happiest in the world?<br />
+										2.	What are the most important contributing factors to a nation’s happiness? <br />
+										3.	Is overall happiness increasing or decreasing?
+									</p>
+									
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://www.kaggle.com/muchammadmalik/world-hapiness-index-in-156-countries" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Data Science Job Salary<br />
+										in United States</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>
+									Data Science is one of the high-demand job at the current time. This dataset contain the salary data of 900++ data science job positions in 
+									United States of America, mentioning the title, company, location, and levels. The purpose of this dataset is providing the salary standar of data 
+									science job for the certain level, or in the certain region. What I analyzed in this dataset are: </br>
+									1.	Salary range for certain title and level </ br>
+									2.	Top highest and lowest salary in certain region or company
+									</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -102,7 +115,7 @@
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
