--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 										in 156 Countries</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>When planning to move to the other country, happiness index of the destinated country is one thing that need to be considered. World happiness index data contain 
-									the country’s happiness score, GDP per capita, social support, healthy life expectancy, freedom to make life choices, generosity, perceptions of corruption, 
+									<p>When planning to move to the other country, happiness index of the destinated country is one thing that need to be considered.  
 									In this project, I extract the World Happiness Index data from Kaggle and answer the several question that related with happiness index. 
 									The question that I answered in this project are: <br />
 										1.	Which country is the happiest in the world?<br />
@@ -98,8 +97,8 @@
 									<p>
 									Data Science is one of the high-demand job at the current time. This dataset contain the salary data of 900++ data science job positions in 
 									United States of America, mentioning the title, company, location, and levels. The purpose of this dataset is providing the salary standar of data 
-									science job for the certain level, or in the certain region. What I analyzed in this dataset are: </br>
-									1.	Salary range for certain title and level </ br>
+									science job for the certain level, or in the certain region. What I analyzed in this dataset are: <br/>
+									1.	Salary range for certain title and level <br/>
 									2.	Top highest and lowest salary in certain region or company
 									</p>
 									<ul class="actions special">
