--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								<article>
 									<header>
 										<h2><a href="#">Data Science Job Salary<br />
-										in United States</a></h2>
+										in California, USA</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>
@@ -102,7 +102,7 @@
 									2.	Top highest and lowest salary in certain region or company
 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/mmalik17/data-analysis-python/blob/main/Data-Science-Job-Data/Data_Science_Salary.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
