commenting zero content

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 										<li><a href="https://github.com/mmalik17/data-analysis-python/blob/main/Data-Science-Job-Data/Data_Science_Salary.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
+							<!--
+								
 								<article>
 									<header>
 										<span class="date">April 18, 2017</span>
@@ -155,10 +157,11 @@
 								</article>
 							</section>
 
-						<!-- Footer -->
+						<!-- Footer 
 							<footer>
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
+								<!--
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -169,10 +172,11 @@
 									<a href="#" class="next">Next</a>
 								</div>
 							</footer>
-
+						-->
 					</div>
-
+				
 				<!-- Footer -->
+						<!--
 					<footer id="footer">
 						<section>
 							<form method="post" action="#">
@@ -194,20 +198,20 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
+					-->
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<h3>Location</h3>
+								<p>Bekasi, Indonesia</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(+62)812-8040-7242</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">muchammad.malik@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -220,7 +224,7 @@
 							</section>
 						</section>
 					</footer>
-
+				-->
 				<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
