--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<h2><a href="#">World Happiness Index<br />
 										in 156 Countries</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/happiness.jpg" alt="" /></a>
 									<p>When planning to move to the other country, happiness index of the destinated country is one thing that need to be considered.  
 									In this project, I extract the World Happiness Index data from Kaggle and answer the several question that related with happiness index. 
 									The question that I answered in this project are: <br />
@@ -93,7 +93,7 @@
 										<h2><a href="#">Data Science Job Salary<br />
 										in California, USA</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/data-computer.jpg" alt="" /></a>
 									<p>
 									Data Science is one of the high-demand job at the current time. This dataset contain the salary data of 900++ data science job positions in 
 									United States of America, mentioning the title, company, location, and levels. The purpose of this dataset is providing the salary standar of data 
