--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 										<li><a href="https://github.com/mmalik17/data-analysis-python/blob/main/Data-Science-Job-Data/Data_Science_Salary.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
+							</section>
 							<!--
 						
 						<!-- Featured Post -->
@@ -128,6 +129,7 @@
 									<li><a href="https://github.com/mmalik17/FGA-ML-capstone-project/blob/main/Capstone%20Project_Text%20Classification/NLP_Muchammad_Malik.ipynb" class="button large">View Project</a></li>
 								</ul>
 							</article>
+							<section>
 								<article>
 									<header>
 										<span class="date">Machine Learning</span>
