--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 						<!-- Posts -->
 							<section class="posts">
 								<article>
-									<header>							
+									<header>
+										<span class="date">Exploratory Data Analysis</span>
 										<h2><a href="#">World Happiness Index<br />
 										in 156 Countries</a></h2>
 									</header>
@@ -90,6 +91,7 @@
 								</article>
 								<article>
 									<header>
+										<span class="date">Exploratory Data Analysis</span>
 										<h2><a href="#">Data Science Job Salary<br />
 										in California, USA</a></h2>
 									</header>
@@ -129,7 +131,8 @@
 									<li><a href="https://github.com/mmalik17/FGA-ML-capstone-project/blob/main/Capstone%20Project_Text%20Classification/NLP_Muchammad_Malik.ipynb" class="button large">View Project</a></li>
 								</ul>
 							</article>
-							<section>
+						
+							<section class="posts">
 								<article>
 									<header>
 										<span class="date">Machine Learning</span>
