--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 						<!-- Featured Post -->
 						
 							<article class="post featured">
-								<header class="major">
+								<!-- <header class="major"> -->
+								<header>
 									<span class="date">Machine Learning</span>
 									<h2><a href="#">Identifying Spam Email Text with<br />
 									Natural Language Processing</a></h2>
