--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
 								<header>
 									<span class="date">Machine Learning</span>
 									<h2><a href="#">Identifying Spam Email Text with<br />
-									Natural Language Processing</a></h2>
+									Natural Language Processing</a></h2>									
+								</header>
+								<!-- <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
+								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 									<p> 
 									Spam email is an unwanted message that come to our email account, mostly from mass broadcast. 
 									Usually, spam messages have certain simillar pattern, such as offering discount, offering free product, etc. The opposite of the spam email is ham email.
@@ -126,8 +129,6 @@
 									In this project, the machine learning model predicts which email considered as spam or ham. The data is splitted into two section, 80% training data and
 									20% test data. The future purpose of this machine learning is selected the spam email to spam folder, so the primary folder is cleaned from spam or unwanted email
 									</p>
-								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/mmalik17/FGA-ML-capstone-project/blob/main/Capstone%20Project_Text%20Classification/NLP_Muchammad_Malik.ipynb" class="button large">View Project</a></li>
 								</ul>
