--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 									Natural Language Processing</a></h2>									
 								</header>
 								<!-- <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
-								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/email-home.jpg" alt="" /></a>
 									<p> 
 									Spam email is an unwanted message that come to our email account, mostly from mass broadcast. 
 									Usually, spam messages have certain simillar pattern, such as offering discount, offering free product, etc. The opposite of the spam email is ham email.
@@ -141,7 +141,7 @@
 										<h2><a href="#">Forecasting Future Temperature with<br />
 										Data Time Series</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/temperature.jpg" alt="" /></a>
 									<p> In this project, the machine learning model analyzes the pattern of temperature change. Then, the analyzed pattern is used to predict the future temperature change. 
 									The data is splitted into two section, 80% training data and 20% test data.
 									</p>
@@ -155,7 +155,7 @@
 										<h2><a href="#">Image Classification with<br />
 										Deep Learning</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/cat%20dog.jpg" alt="" /></a>
 									<p>
 									In this project, there are 1000 dog images, 1000 cat images, and 1000 panda images. Every image is labelled with the suitable animal name. The machine learning paired image data and label data. 
 									Then, it analyzes the characteristic of dog, cat, and panda. The data is splitted into two section, 80% training data and 20% test data.</p>
