--- a/index.html
+++ b/index.html
@@ -55,16 +55,21 @@
 						<!--
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">Exploratory Data Analysis</span>
+									<h2><a href="#">Analyze E-Commerce Customer Purchases<br />
+									Based on Job and Region</a></h2>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/sales%20data.jpg" alt="" /></a>
+								<p>
+								Purchasing activity of the customer is affected by several factor, such as economy or the region. 
+								In this dataset, I analyze the relationship between the purchase price variable to job, company, and address variable. 
+								The job or company data is related to economic factor while the address data is related with the region factor. 
+								The purpose of this dataset is giving the insight to the company about the region, job, or company that contribute the highest sales.
+								</p>
+								<p>
+								</p>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
