--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
 					</header>
 
 				<!-- Nav -->
-				<!--	<nav id="nav">
+					<nav id="nav">
 						<ul class="links">
+						<!--
 							<li class="active"><a href="index.html">This is Massively</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
+						-->
+							<li class="active"><a href="index.html">Data Science</a></li>
+							<li><a href="https://mmalik17.github.io/datavisualization/">Data Visualization</a></li>	
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -46,7 +50,7 @@
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
-				-->
+				
 
 				<!-- Main -->
 					<div id="main">
