--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<div id="intro">
 						<h1>Data Science<br />
 						Portofolio</h1>
+						<h2> With Python Programming Language </h2>
 						<p>Created by Muchammad Malik</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
