--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
 							<li class="active"><a href="index.html">Data Science</a></li>
 							<li><a href="https://mmalik17.github.io/datavisualization/">Data Visualization</a></li>	
 						</ul>
+						<!--
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
+						-->
 					</nav>
 				
 
@@ -57,24 +59,27 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-						<!--
+						
 							<article class="post featured">
 								<header class="major">
 									<span class="date">Exploratory Data Analysis</span>
 									<h2><a href="#">Analyze E-Commerce Customer Purchases<br />
 									Based on Job and Region</a></h2>
 								</header>
-								<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/sales%20data.jpg" alt="" /></a>
+								<a href="" class="image fit"><img src="images/content/sales%20data.jpg" alt="" /></a>
 								<p>
 								Purchasing activity of the customer is affected by several factor, such as economy or the region. 
-								In this dataset, I analyze the relationship between the purchase price variable to job, company, and address variable. 
-								The job or company data is related to economic factor while the address data is related with the region factor. 
-								The purpose of this dataset is giving the insight to the company about the region, job, or company that contribute the highest sales.
+								In this dataset, I analyze the relationship between the purchase price variable to job and address variable. 
+								The job  data is related to economic factor while the address data is related with the region factor. 
+								The purpose of this dataset is giving the insight to the company about which region or occupation that contribute the highest sales.
+								<b> Challenge </b> <br/>
+								There is no column named 'region' in the dataset. The region data should be extracted from 'Full Address' column. Hence, the full address column 
+								need to be separated into several parth, such as City, State, and Postcode
 								</p>
 								<p>
 								</p>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/mmalik17/Sales-Analysis/blob/main/Analyze_ecommerce_purchase.ipynb" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
