--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 						<!-- Featured Post -->
 						
 							<article class="post featured">
-								<header class="major">
+<!-- 								<header class="major"> -->
+								<header>
 									<span class="date">Exploratory Data Analysis</span>
 									<h2><a href="#">Analyze E-Commerce Customer Purchases<br />
 									Based on Job and Region</a></h2>
