--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 								In this dataset, I analyze the relationship between the purchase price variable to job and address variable. 
 								The job  data is related to economic factor while the address data is related with the region factor. 
 								The purpose of this dataset is giving the insight to the company about which region or occupation that contribute the highest sales.
-								<b> Challenge </b> <br/>
+								</p>
+								<p><b> Challenge: </b> <br/>
 								There is no column named 'region' in the dataset. The region data should be extracted from 'Full Address' column. Hence, the full address column 
 								need to be separated into several parth, such as City, State, and Postcode
 								</p>
