--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Data Science Portofolio</title>
+		<title>Data Science Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Data Science<br />
-						Portofolio</h1>
+						Portfolio</h1>
 						<h2> With Python Programming Language </h2>
 						<p>Created by Muchammad Malik</p>
 						<ul class="actions">
