--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 								The job  data is related to economic factor while the address data is related with the region factor. 
 								The purpose of this dataset is giving the insight to the company about which region or occupation that contribute the highest sales.
 								</p>
+								<br />
+									<b> Question: </b> <br />
+									1. Which state or city that has the highest purchase price? <br />
+									2. Which occupation that has the highest purchase price? <br />
+								
 								<p><b> Challenge: </b> <br/>
 								There is no column named 'region' in the dataset. The region data should be extracted from 'Full Address' column. Hence, the full address column 
 								need to be separated into several parth, such as City, State, and Postcode
@@ -95,8 +100,8 @@
 									</header>
 									<a href="" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/happiness.jpg" alt="" /></a>
 									<p>When planning to move to the other country, happiness index of the destinated country is one thing that need to be considered.  
-									In this project, I extract the World Happiness Index data from Kaggle and answer the several question that related with happiness index. 
-									The question that I answered in this project are: <br />
+									In this project, I extract the World Happiness Index data from Kaggle and answer the several question that related with happiness index. <br />
+										<b> Question: </b> <br />
 										1.	Which country is the happiest in the world?<br />
 										2.	What are the most important contributing factors to a nation’s happiness? <br />
 										3.	Is overall happiness increasing or decreasing?
@@ -116,9 +121,10 @@
 									<p>
 									Data Science is one of the high-demand job at the current time. This dataset contain the salary data of 900++ data science job positions in 
 									United States of America, mentioning the title, company, location, and levels. The purpose of this dataset is providing the salary standar of data 
-									science job for the certain level, or in the certain region. What I analyzed in this dataset are: <br/>
-									1.	Salary range for certain title and level <br/>
-									2.	Top highest and lowest salary in certain region or company
+									science job for the certain level, or in the certain region. <br />
+										<b> Question: </b> <br />
+									1.	How much is the salary range for certain title and level? <br/>
+									2.	Which region or company that has the top highest salary and the lowest one?
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/mmalik17/data-analysis-python/blob/main/Data-Science-Job-Data/Data_Science_Salary.ipynb" class="button">View Project</a></li>
