--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
 								The job  data is related to economic factor while the address data is related with the region factor. 
 								The purpose of this dataset is giving the insight to the company about which region or occupation that contribute the highest sales.
 								</p>
-								<br />
 								<p>
 								<b> Objectives </b> <br />
 								1. Identify which state or city that give the highest revenue by looking at the highest purchase price column<br />
@@ -130,7 +129,7 @@
 									Data Science is one of the high-demand job at the current time. This dataset contain the salary data of 900++ data science job positions in 
 									United States of America, mentioning the title, company, location, and levels. The purpose of this dataset is providing the salary standar of data 
 									science job for the certain level, or in the certain region. <br />
-											<b> Objectives: </b> <br />
+									<b> Objectives: </b> <br />
 									1.	Analyze the salary range for certain title and level? <br/>
 									2.	Identify which region or company that has the top highest salary and the lowest one.
 									</p>
@@ -163,7 +162,9 @@
 									</p>
 									<p>
 									In this project, the machine learning model predicts which email considered as spam or ham. The data is splitted into two section, 80% training data and
-									20% test data. The future purpose of this machine learning is selected the spam email to spam folder, so the primary folder is cleaned from spam or unwanted email
+									20% test data. The future purpose of this machine learning is selected the spam email to spam folder, so the primary folder is cleaned from spam or unwanted email  <br />
+									<b> Objectives: </b> <br />
+									Create a model that could differentiate spam and ham email with natural language processing (NLP) technique
 									</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/mmalik17/FGA-ML-capstone-project/blob/main/Capstone%20Project_Text%20Classification/NLP_Muchammad_Malik.ipynb" class="button large">View Project</a></li>
@@ -180,6 +181,8 @@
 									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/temperature.jpg" alt="" /></a>
 									<p> In this project, the machine learning model analyzes the pattern of temperature change. Then, the analyzed pattern is used to predict the future temperature change. 
 									The data is splitted into two section, 80% training data and 20% test data.
+									<b> Objectives: </b> <br />
+									Create a model that could forecast the temperature with Data time series technique
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/mmalik17/FGA-ML-capstone-project/blob/main/Capstone%20Project_Time%20Series/Proyek_Kedua_Muchammad_Malik.ipynb" class="button">View Project</a></li>
@@ -194,7 +197,10 @@
 									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/cat%20dog.jpg" alt="" /></a>
 									<p>
 									In this project, there are 1000 dog images, 1000 cat images, and 1000 panda images. Every image is labelled with the suitable animal name. The machine learning paired image data and label data. 
-									Then, it analyzes the characteristic of dog, cat, and panda. The data is splitted into two section, 80% training data and 20% test data.</p>
+									Then, it analyzes the characteristic of dog, cat, and panda. The data is splitted into two section, 80% training data and 20% test data.
+									<b> Objectives: </b> <br />
+									Create a model that could differentiate the animal name inside the image
+									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/mmalik17/FGA-ML-capstone-project/blob/main/Capstone%20Project_Image%20Classification/Proyek_Akhir_Muchammad_Malik.ipynb" class="button">View Project</a></li>
 									</ul>
