--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 									</header>
 									<a href="" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/happiness.jpg" alt="" /></a>
 									<p>When planning to move to the other country, happiness index of the destinated country is one thing that need to be considered.  
-									In this project, I extract the World Happiness Index data from Kaggle and answer the several question that related with happiness index. <br />
+									In this project, I extract the World Happiness Index data from Kaggle and answer the several question that related with happiness index. </p>
+									<p>
 										<b> Objective </b> <br />
 										1.	Find the country that has the highest happiness index in the world?<br />
 										2.	Identify the most important contributing factors to a nation’s happiness <br />
@@ -128,7 +129,8 @@
 									<p>
 									Data Science is one of the high-demand job at the current time. This dataset contain the salary data of 900++ data science job positions in 
 									United States of America, mentioning the title, company, location, and levels. The purpose of this dataset is providing the salary standar of data 
-									science job for the certain level, or in the certain region. <br />
+									science job for the certain level, or in the certain region. </p>
+									<p>
 									<b> Objectives: </b> <br />
 									1.	Analyze the salary range for certain title and level? <br/>
 									2.	Identify which region or company that has the top highest salary and the lowest one.
@@ -162,7 +164,8 @@
 									</p>
 									<p>
 									In this project, the machine learning model predicts which email considered as spam or ham. The data is splitted into two section, 80% training data and
-									20% test data. The future purpose of this machine learning is selected the spam email to spam folder, so the primary folder is cleaned from spam or unwanted email  <br />
+									20% test data. The future purpose of this machine learning is selected the spam email to spam folder, so the primary folder is cleaned from spam or unwanted email. </p>
+									<p>
 									<b> Objectives: </b> <br />
 									Create a model that could differentiate spam and ham email with natural language processing (NLP) technique
 									</p>
