--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										<h2><a href="#">World Happiness Index<br />
 										in 156 Countries</a></h2>
 									</header>
-									<a href="" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/happiness.jpg" alt="" /></a>
+									<a href="" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/happiness-min.jpg" alt="" /></a>
 									<p>When planning to move to the other country, happiness index of the destinated country is one thing that need to be considered.  
 									In this project, I extract the World Happiness Index data from Kaggle and answer the several question that related with happiness index. </p>
 									<p>
@@ -125,7 +125,7 @@
 										<h2><a href="#">Data Science Job Salary<br />
 										in California, USA</a></h2>
 									</header>
-									<a href="" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/data-computer.jpg" alt="" /></a>
+									<a href="" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/data-computer-min.jpg" alt="" /></a>
 									<p>
 									Data Science is one of the high-demand job at the current time. This dataset contain the salary data of 900++ data science job positions in 
 									United States of America, mentioning the title, company, location, and levels. The purpose of this dataset is providing the salary standar of data 
@@ -157,7 +157,7 @@
 									Natural Language Processing</a></h2>									
 								</header>
 								<!-- <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
-								<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/email-home.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/email-home-min.jpg" alt="" /></a>
 									<p> 
 									Spam email is an unwanted message that come to our email account, mostly from mass broadcast. 
 									Usually, spam messages have certain simillar pattern, such as offering discount, offering free product, etc. The opposite of the spam email is ham email.
@@ -207,7 +207,7 @@
 										<h2><a href="#">Image Classification with<br />
 										Deep Learning</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/cat%20dog.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/cat%20dog-min.jpg" alt="" /></a>
 									<p>
 									In this project, there are 1000 dog images, 1000 cat images, and 1000 panda images. Every image is labelled with the suitable animal name. The machine learning paired image data and label data. 
 									Then, it analyzes the characteristic of dog, cat, and panda. The data is splitted into two section, 80% training data and 20% test data.
