--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 							<li><a href="elements.html">Elements Reference</a></li>
 						-->
 							<li class="active"><a href="index.html">Data Science</a></li>
-							<li><a href="https://mmalik17.github.io/datavisualization/">Data Visualization</a></li>	
+							<li><a href="https://mmalik17.github.io/datavisualization/">Data Visualization</a></li>
+							<li><a href="https://mmalik17.github.io/machinelearning/">Machine Learning</a></li>
 						</ul>
 						<!--
 						<ul class="icons">
