--- a/index.html
+++ b/index.html
@@ -182,43 +182,46 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">Machine Learning</span>
-										<h2><a href="#">Forecasting Future Temperature with<br />
-										Data Time Series</a></h2>
+										<span class="date">Structured Query Language (SQL) </span>
+										<h2><a href="#">Analyzing eCommerce Business Performance with <br />
+										Structured Query Language (SQL)</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/temperature.jpg" alt="" /></a>
-									<p> In this project, the machine learning model analyzes the pattern of temperature change. Then, the analyzed pattern is used to predict the future temperature change. 
-									The data is splitted into two section, 80% training data and 20% test data.
+									<p> This project has a purpose to analyze several business metrics that could influence the performance of ecommerce business with SQL query. 
+									The metrics we analyze here are customer growth, product quality, and payment type.
 									</p>
 									<p>
 									<b> Objectives: </b> <br />
-									Create a model that could forecast the temperature with Data time series technique
+									1.  Analyze the product quality based on revenue generated and order cancellation data <br>
+									2.  Analyze the payment type preference from the customers <br>
 									</p>
 									<p><b> Challenge: </b> <br/>
-									The model should have error below than 10%, which mean square error is 3.2
+									1. The data source is from 8 separated csv files that needed to imported using PostgreSQL <br>
+									2. The imported dataset is need to be processed with CTE, so the information would be suitable with the objectives.
 									</p>
 									
 									<ul class="actions special">
-										<li><a href="https://github.com/mmalik17/FGA-ML-capstone-project/blob/main/Capstone%20Project_Time%20Series/Proyek_Kedua_Muchammad_Malik.ipynb" class="button">View Project</a></li>
+										<li><a href="https://github.com/mmalik17/Rakamin-Mini-Project/tree/main/Analyzing-Ecommerce-using-SQL" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">Machine Learning</span>
-										<h2><a href="#">Image Classification with<br />
-										Deep Learning</a></h2>
+										<span class="date">Exploratory Data Analysis</span>
+										<h2><a href="#">Investigating Hotel Business Performance<br />
+										Using Data Visualization in Python</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/cat%20dog-min.jpg" alt="" /></a>
 									<p>
-									In this project, there are 1000 dog images, 1000 cat images, and 1000 panda images. Every image is labelled with the suitable animal name. The machine learning paired image data and label data. 
-									Then, it analyzes the characteristic of dog, cat, and panda. The data is splitted into two section, 80% training data and 20% test data.
+									The purpose of this project is find out about how our customers behave in making hotel bookings based on hotel type, and analyze several factor that affect 
+									the cancellation rates of hotel bookings, such as lead time and stay duration. The analysis will be carried out with data visualization
 									</p>
 									<p>
 									<b> Objectives: </b> <br />
-									Create a model that could differentiate the animal name inside the image
+									1. Analyze the relationship between cancellation ratio with the hotel type and stay duration
+									2. Analyze the relationship between cancellation ratio with leadtime (duration between the booking date and check-in date)
 									</p>
 									<p><b> Challenge: </b> <br/>
-									The data source is not from the regular table, but from the folder/directory. The model should have accuracy more than 85%
+									The dataset has several missing data or data that has unappropriate value. Those missing and unappropriate data need to be pre-processed before proceeding to analysis.
 									</p>
 									
 									<ul class="actions special">
