--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 									</p>
 									
 									<ul class="actions special">
-										<li><a href="https://github.com/mmalik17/FGA-ML-capstone-project/blob/main/Capstone%20Project_Image%20Classification/Proyek_Akhir_Muchammad_Malik.ipynb" class="button">View Project</a></li>
+										<li><a href="https://github.com/mmalik17/Rakamin-Mini-Project/tree/main/Investigate-Business-Hotel-Using-Visualization" class="button">View Project</a></li>
 									</ul>
 								<!--
 								</article>
