--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 										<h2><a href="#">Analyzing eCommerce Business Performance with <br />
 										Structured Query Language (SQL)</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/temperature.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/dataportfolio/main/images/content/E-commerce%20image.jpg" alt="" /></a>
 									<p> This project has a purpose to analyze several business metrics that could influence the performance of ecommerce business with SQL query. 
 									The metrics we analyze here are customer growth, product quality, and payment type.
 									</p>
@@ -214,7 +214,7 @@
 										<h2><a href="#">Investigating Hotel Business Performance<br />
 										Using Data Visualization in Python</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/datascience/main/images/content/cat%20dog-min.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://raw.githubusercontent.com/mmalik17/dataportfolio/main/images/content/Hotel%20Image.jpg" alt="" /></a>
 									<p>
 									The purpose of this project is find out about how our customers behave in making hotel bookings based on hotel type, and analyze several factor that affect 
 									the cancellation rates of hotel bookings, such as lead time and stay duration. The analysis will be carried out with data visualization
